# Erpnext

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
erpnext/accounts/doctype/sales_invoice/: sales_invoice.json  sales_invoice.py
erpnext/accounts/workspace/accounting/: accounting.json
erpnext/accounts/workspace/financial_reports/: financial_reports.json
erpnext/accounts/workspace/payables/: payables.json
erpnext/accounts/workspace/receivables/: receivables.json
erpnext/assets/workspace/assets/: assets.json
erpnext/buying/workspace/buying/: buying.json
erpnext/communication/page/shijua/: shijua.js  shijua.json
erpnext/crm/doctype/prospect/: prospect.json  prospect.py
erpnext/crm/doctype/sales_visit_scheduler/: sales_visit_scheduler.js  sales_visit_scheduler.json  sales_visit_scheduler.py  test_sales_visit_scheduler.py
erpnext/crm/workspace/crm/: crm.json
erpnext/crm/workspace/santhosh/: santhosh.json
erpnext/erpnext_integrations/workspace/erpnext_integrations/: erpnext_integrations.json
erpnext/manufacturing/number_card/monthly_completed_work_order/: monthly_completed_work_order.json
erpnext/manufacturing/workspace/manufacturing/: manufacturing.json
erpnext/projects/workspace/projects/: projects.json
erpnext/quality_management/doctype/quality_testing/: quality_testing.js  quality_testing.json  quality_testing.py  test_quality_testing.py
erpnext/quality_management/workspace/quality/: quality.json
kggl_support/: api.py  apilead.py  hooks.py  modules.txt
kggl_support/www/: login.html  script.js
(+25 files in other folders)
